# MIML-final-grokking

./: README.md  config_base.yaml  data_generation.py  load_yaml.py  lr_schedule.py  models.py  optimizers.py  pyproject.toml  subtask3.py  subtask4.py  train.py
Graphs/: Experiments.md
Results/subtask3/: RMSprop.npz  RMSprop_weight_decay_0.05.npz  RMSprop_weight_decay_0.1.npz  adam.npz  adamw_dropout_0.1.npz  adamw_larger_learning_rate.npz  adamw_smaller_learning_rate.npz  sgd.npz  sgd_nesterov.npz
Results/subtask4/: subtask4.npz
configs/: config_subtask1_exp1.yaml
configs/subtask1/: config_subtask1_exp1.yaml
configs/subtask2/: config_subtask2_lstm.yaml  config_subtask2_mlp.yaml  config_subtask2_trans_native,yaml
configs/subtask3/: RMSprop.yaml  RMSprop_weight_decay_0.1.yaml  adam.yaml  adamw_dropout_0.1.yaml  adamw_larger_learning_rate.yaml  adamw_smaller_learning_rate.yaml  sgd.yaml  sgd_nesterov.yaml
configs/subtask3_finish/: RMSprop.yaml  RMSprop_weight_decay_0.05_fail.yaml  adamw_dropout_0.1.yaml  adamw_smaller_learning_rate.yaml  sgd.yaml  sgd_nesterov.yaml
configs/subtask4/: subtask4.yaml
